2002-03-15  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* dialog-solver.c (cb_dialog_solve_clicked): Changes related to
	the enumeration of the solver's status type.

2002-03-14  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-sheet-order.c : support showing the color
	  of colored tabs

2002-03-14  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* dialog-solver.c (cb_dialog_solve_clicked): If the problem is
	infeasible report it as such.

2002-03-12  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* merge.glade : new dialog for the Merge tool
	* dialog-merge.c : newly implemented Merge tool
	* dialogs.h (dialog_merge) : new
	* Makefile.am : add dialog-merge.c and merge.glade

2002-03-12  Morten Welinder  <terra@diku.dk>

	* dialog-search.c (dialog_search): Drop the dummy state.  Newest
	gal no longer needs it.

2002-03-12  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-search.c : hook-up help button
	* search.glade : ditto

2002-03-11  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dao-gui-utils.c (focus_on_entry) : The second widget is
	  an expr-entry widget
	(dialog_tool_init_outputs) : link to focus-in-event of
	  entry within the expr-entry widget

2002-03-11  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/dialogs/search.glade : port to gnome2
	* src/dialogs/dialog-search.c : port to gnome2,
	  some problems remain to be fixed.
	
2002-03-11  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dao-gui-utils.[hc] : new files, code extracted from 
	  src/tools/analysis-tools.[ch] and 
	  src/dialogs/dialog-analysis-tools.c, various
	  functions renamed (prepended dao_)
	* dialog-analysis-tools.c : some code moved to
	  dao-gui-utils.[hc] and src/tools/dao.[hc], change of 
	  names of utility functions now in dao-gui-utils.[hc]
	  or src/tools/dao.[hc]
	* src/dialogs/dialog-advanced-filter.c : change of 
	  names of utility functions now in dao-gui-utils.[hc]
	  or src/tools/dao.[hc]
	* Makefile.am : added dao-gui-utils.[hc]
