@@ -4,7 +4,6 @@ Regarding LP & ILP:
 Critical bugs:
   * fix crash: INT constraints support
   * fix crash: MPS import when a model has already defined
-  * fix crash: if ("target cell" -> NULL) && ("input cells" -> NULL) then crach
   * fix bug: check that target cell contains a formula
   * fix bug: check that constraint LHS contains a number value
   * fix bug: check that constraint RHS is a number value
@@ -13,6 +12,7 @@ Critical bugs:
     - a badly formulated program may still crash the spreadsheet
 
 Usability fixes:
+  * add warnings if data in cells is going to be overwritten
   * add `keep original values dialog'
    - fix the saving of these values twice
   * get_lp_coeff: test that it's really LP
